--- a/root/index.html
+++ b/root/index.html
@@ -15,6 +15,7 @@
         <p class="status"></p>
         <p class="try-again hidden">Try Again</p>
     </div>
+    <div><p class="instructions">Use Left, Right and Up keys to get to the pink platform!</p></div>
     <canvas id="canvas"></canvas>  
 </body>
 <script src="logic.js"></script>
