--- a/root/index.html
+++ b/root/index.html
@@ -10,15 +10,16 @@
     <title>Platformer Basics</title>
 </head>
 <body>
-    <div>
-        <P>Level 1</P>
-        <p class="status"></p>
-        <p class="try-again hidden">Try Again</p>
-    </div>
-    <div>
+    <header>
+        <h1>Platforms</h1>
+        <p class="level">Level 1</p>
         <p class="instructions">Use Left, Right and Up keys to get to the pink platform!</p>
-    </div>
-    <canvas id="canvas"></canvas>  
+        <div>
+            <p class="status"></p>
+            <p class="try-again hidden">Try Again</p>
+        </div>
+    </header>
+    <canvas></canvas>  
 </body>
 <script src="logic.js"></script>
 </html>
