--- a/root/index.html
+++ b/root/index.html
@@ -16,7 +16,7 @@
         <p class="instructions">Use Left, Right and Up keys to get to the pink platform!</p>
         <div>
             <p class="status"></p>
-            <p class="try-again hidden">Try Again</p>
+            <button class="try-again hidden">Try Again</button>
         </div>
     </header>
     <canvas></canvas>  
