--- a/root/index.html
+++ b/root/index.html
@@ -19,7 +19,10 @@
             <button class="try-again hidden">Try Again</button>
         </div>
     </header>
-    <canvas></canvas>  
+    <main>
+        <canvas></canvas> 
+    </main>
+     
 </body>
-<script src="logic.js"></script>
+<script src="javascript/main.js" type="module"></script>
 </html>
